Feat : 매칭 패널티 정렬 로직 변경 및 응답값 수정