@@ -6,6 +6,7 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.petmatz.domain.match.dto.response.DetailedMatchResultResponse;
 import com.petmatz.domain.match.dto.response.MatchScoreResponse;
+import com.petmatz.domain.match.dto.response.PaginatedMatchResponse;
 import com.petmatz.domain.match.exception.MatchException;
 import com.petmatz.domain.user.entity.User;
 import com.petmatz.domain.user.repository.UserRepository;
@@ -13,8 +14,11 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.petmatz.domain.match.exception.MatchErrorCode.INVALID_REDIS_DATA;
 import static com.petmatz.domain.match.exception.MatchErrorCode.NULL_MATCH_DATA;
@@ -27,7 +31,7 @@ public class MatchService {
     private final UserRepository userRepository;
     private final RedisTemplate<String, Object> redisTemplate;
 
-    public List<DetailedMatchResultResponse> getPageUserDetailsFromRedis(Long userId, int page, int size) {
+    public PaginatedMatchResponse getPageUserDetailsFromRedis(Long userId, int page, int size) {
         String redisKey = "matchResult:" + userId;
 
         Object rawData = redisTemplate.opsForValue().get(redisKey);
@@ -49,20 +53,29 @@ public class MatchService {
                 throw new MatchException(INVALID_REDIS_DATA);
             }
 
+            // 점수로 내림차순 (같으면 거리로 오름차순)
+            matchScores.sort(Comparator
+                    .comparingDouble(MatchScoreResponse::totalScore)
+                    .thenComparingDouble(MatchScoreResponse::distance).reversed()
+            );
+
             // 페이징 처리
             int start = page * size;
             int end = Math.min(start + size, matchScores.size());
             if (start >= matchScores.size()) {
-                return Collections.emptyList();
+                return new PaginatedMatchResponse(new ArrayList<>(), 0); // 혹시 넘으면 빈 리스트 반환
             }
 
             List<MatchScoreResponse> pagedMatchScores = matchScores.subList(start, end);
 
-            return pagedMatchScores.stream()
+            long totalElements = matchScores.size();
+            int totalPages = (int) Math.ceil((double) totalElements / size);
+
+            List<DetailedMatchResultResponse> detailedMatchResults = pagedMatchScores.stream()
                     .map(score -> {
+                        // 추후 예외 교체
                         User user = userRepository.findById(score.id())
                                 .orElseThrow(() -> new MatchException(USER_NOT_FOUND, "해당 ID의 사용자를 찾을 수 없습니다: " + score.id()));
-                        // 추후에 예외 교체
                         return new DetailedMatchResultResponse(
                                 user.getId(),
                                 user.getNickname(),
@@ -72,13 +85,13 @@ public class MatchService {
                                 user.getCareCompletionCount()
                         );
                     })
-                    .toList();
+                    .collect(Collectors.toList());
+
+            return new PaginatedMatchResponse(detailedMatchResults, totalPages);
         } catch (JsonProcessingException e) {
             throw new IllegalArgumentException("JSON 데이터 처리 중 오류 발생", e);
         } catch (ClassCastException e) {
             throw new IllegalStateException("데이터 타입 캐스팅 오류 발생", e);
         }
     }
-
-
 }
